# Vairus

./: .gitignore  Cargo.toml
src/: config.rs  event_handler.rs  main.rs  util.rs
src/modules/: ban.rs  eval.rs  mod.rs  moderate.rs  ping.rs
