[package]
name = "vairus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
libloading = "0.7.4"
rand = "0.8.5"
segfault = "0.1.0"
serenity = { version = "0.11.5", default-features = false, features = [
    "cache",
    "client",
    "gateway",
    "model",
    "rustls_backend",
    "time",
    "utils",
] }
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
